--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" href="./style/groceries-page.css">
   <link rel="stylesheet" href="./style/locally-sourced-page.css">
+  <link rel="stylesheet" href="./style/made-simple-page.css">
+  <link rel="stylesheet" href="./style/faq-page.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,600;0,700;1,500;1,600&display=swap');
   </style>
@@ -89,6 +91,169 @@
   </div>
 
   <div class="locally">
+    <div class="top-dots">
+      <img src="./images/shape_2.png" alt="dots">
+    </div>
+
+    <div class="bananas">
+      <img src="./images/bananas.png" alt="bananas">
+    </div>
+
+    <div class="pear">
+      <img src="./images/pear.png" alt="pear">
+    </div>
+
+    <div class="bottom-dots">
+      <img src="./images/shape_11.png" alt="dots illustration">
+    </div>
+
+    <div class="text">
+      <div class="container">
+        <h4>OUR PROMISE</h4>
+        <h1>Locally Sourced <br /> Products.</h1>
+        <p>Bluu Grocer Mart promises quality food products that are ethically sourced,
+          fresh, and carefully picked for our customers. Our products range from meat,
+          vegetables to fruits that you’ll definitely enjoy.</p>
+        <button>LEARN MORE</button>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="made-simple">
+
+    <div class="top-dots">
+      <img src="./images/shape_14.png" alt="dots">
+    </div>
+
+    <div class="bottom-dots">
+      <img src="./images/shape_12.png" alt="dots">
+    </div>
+
+    <div class="content">
+
+      <div class="text-container">
+        <h1>Made simple.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+
+      <div class="product-container">
+        <div class="product">
+          <div class="rect pear">
+            <img src="./images/simple-pear.png" alt="pear">
+          </div>
+          <div class="description">
+            <div class="name-prince">
+              <h3>
+                Product Name
+              </h3>
+              <p>
+                $000.0
+              </p>
+            </div>
+            <button>
+              ADD TO CART
+            </button>
+          </div>
+        </div>
+        <div class="product">
+          <div class="rect pear">
+            <img src="./images/simple-pineapple.png" alt="pineapple">
+          </div>
+          <div class="description">
+            <div class="name-prince">
+              <h3>
+                Product Name
+              </h3>
+              <p>
+                $000.0
+              </p>
+            </div>
+            <button>
+              ADD TO CART
+            </button>
+          </div>
+        </div>
+        <div class="product">
+          <div class="rect lemon">
+            <img src="./images/simple-lemon.png" alt="lemon">
+          </div>
+          <div class="description">
+            <div class="name-prince">
+              <h3>
+                Product Name
+              </h3>
+              <p>
+                $000.0
+              </p>
+            </div>
+            <button>
+              ADD TO CART
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="arrows">
+        <img src="./images/arrow-left.png" alt="arrow left">
+        <img src="./images/arrow-right.png" alt="arrow right">
+      </div>
+    </div>
+
+  </div>
+
+  <div class="faq">
+
+    <div class="top-dots">
+      <img src="./images/shape_17.png" alt="dots">
+    </div>
+
+    <div class="bottom-dots">
+      <img src="./images/shape_5.png" alt="dots">
+    </div>
+
+    <div class="content">
+      <div class="faqs">
+        <h1>FAQs</h1>
+        <div class="question">
+          <div class="text">
+            <p>Do you accept credit card payments?</p>
+            <p>+</p>
+          </div>
+          <hr />
+        </div>
+        <div class="question">
+          <div class="text">
+            <p>What’s your refund policy?</p>
+            <p>+</p>
+          </div>
+          <hr />
+        </div>
+        <div class="question">
+          <div class="text">
+            <p>How do deliveries work?</p>
+            <p>+</p>
+          </div>
+          <hr />
+        </div>
+        <div class="question">
+          <div class="text">
+            <p>Do you offer contactless deliveries?</p>
+            <p>+</p>
+          </div>
+          <hr />
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/card.png" alt="card">
+
+      </div>
+    </div>
+
 
   </div>
 
