--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
 
   <script src="app.js" defer></script>
+  <script src="lodash.js"></script>
 </head>
 
 <body>
@@ -35,7 +36,7 @@
 
       <div class="input-group mb-3">
         <div class="input-group-prepend">
-          <span class="input-group-text" id="">Time/Date</span>
+          <span class="input-group-text label-primary label-outlined" id="">Time/Date</span>
         </div>
         <input id="time-input" type="time" class="form-control">
         <input id="date-input" type="date" class="form-control">
